<resources>
    <string name="app_name">WebSpace</string>
    <string name="app_icon">App Icon</string>
    <string name="prebuild_msg">This app is under development. please visit again and Thanks for Downloading</string>
    <string name="logout">Logout</string>

    <string name="sample_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_app_id">ca-app-pub-6242171661439587~1091516122</string>

    <string name="sample_admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner_id">ca-app-pub-6242171661439587/2811274981</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_internet">Internet</string>
    <string name="menu_intranet">Intranet</string>
    <string name="menu_offline">Offline</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="account_header">Account</string>
    <string name="title_nav_header_home">Navigation Fragment</string>
    <string name="nav_label">Navigation</string>
    <string name="profile_photo">profile_photo</string>
    <string name="action_report">Report a bug</string>

    <string name="report_title_not_valid">Title can not be empty</string>
    <string name="report_description_not_valid">Description can not empty</string>
    <string name="msg_token_fmt"></string>

    <string name="fcm_token">Emulator Android_9.0 Android 9, API 28</string>
    <string name="txt_current_version">Current Version</string>
    <string name="current_version">20.04.16</string>
    <string name="update">UPDATE</string>
    <string name="attendance">Attendance</string>
    <string name="under_dev_msg">this feature is under development</string>

</resources>
