<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_internet">

    <fragment
        android:id="@+id/nav_internet"
        android:name="com.androidteamiiitdmj.webspace.ui.internet.InternetFragment"
        android:label="@string/menu_internet"
        tools:layout="@layout/fragment_internet">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.androidteamiiitdmj.webspace.ui.internet.InternetFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_internet" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_intranet"
        android:name="com.androidteamiiitdmj.webspace.ui.intranet.IntranetFragment"
        android:label="@string/menu_intranet"
        tools:layout="@layout/fragment_intranet" />

    <fragment
        android:id="@+id/nav_offline"
        android:name="com.androidteamiiitdmj.webspace.ui.offline.OfflineFragment"
        android:label="@string/menu_offline"
        tools:layout="@layout/fragment_offline" />

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.androidteamiiitdmj.webspace.ui.attendance.AttendanceFragment"
        android:label="@string/attendance"
        tools:layout="@layout/attendance_fragment" />

</navigation>